Fri Dec  3 12:54:48 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RCFLAGS): VC10 and after only. fixed the problem
	  of r30015. [ruby-core:33530]

Fri Dec  3 12:41:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): With our "lazy-sweep" GC engine, it is
	  possible for an object to survive until its surrounding object
	  space is about to be freed.  Those objects, if any, remains
	  leaked for the rest of a process life.  This is problematic
	  because for instance a T_DATA object may have its own destructor
	  to terminate something.

	* vm.c (ruby_vm_destruct): ruby_current_vm termination should be
	  somewhere after rb_objspace_free for above reason.

Fri Dec  3 12:17:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): protected singleton methods should
	  be visible from same real class methods.  [ruby-core:33506]

Fri Dec  3 07:08:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): round upto next char
	  boundary.  [ruby-dev:42674]

Fri Dec  3 06:52:46 2010  Tanaka Akira  <akr@fsij.org>

	* compile.c: parenthesize macro arguments.

Fri Dec  3 04:08:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): use st_insert2 and change return
	  value to int.

	* encoding.c (enc_alias): follow enc_alias_internal.

Fri Dec  3 01:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): use xfree instead of free.

Thu Dec  2 23:52:26 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: entry for ruby_vm_at_exit().

	* eval.c (ruby_cleanup): bug fix around at_exit (1) timing was
	  wrong. (2) execution order was opposite.

Thu Dec  2 23:05:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RCFLAGS): -nologo switch is only available in
	  newer versions of rc.exe. fixed the problem of r30012.

Thu Dec  2 21:28:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>
