@@ -1,3 +1,7 @@
+Fri Dec  3 19:48:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (check_sizeof): should return integer always.
+
 Fri Dec  3 12:54:48 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (RCFLAGS): VC10 and after only. fixed the problem
